1st package version

--- a/waterquality/WaterDetect.ini
+++ b/waterquality/WaterDetect.ini
@@ -32,12 +32,13 @@ mask_invalid_value = 255
 
 
 # *** SECTION INVERSION (L2->L3) ***
-# these are the options needed for converting water pixel reflectance in water parameters
+# These are the options needed for converting water pixel reflectance in water parameters
+# You can specify more than one parameter, separated by comma.
 # available parameters:
 # turb-dogliotti / spm-get / chl-lins / aCDOM-brezonik / chl-giteslon
 [Inversion]
 inversion = True
-parameter = turb-dogliotti
+parameter = turb-dogliotti, spm-get
 
 # sets minimum and maximum value for parameter for visualization legend
 # if None is provided, the scale will range from min(x) to max(x)
@@ -90,7 +91,7 @@ clustering_bands = [
 ;		    ['mndwi', 'Nir' , 'Mir2', 'mbwi'],
 #		    ['mndwi', 'Nir' , 'awei', 'Mir2'],
 #		    ['mndwi', 'ndwi', 'awei'],
-;		    ['mndwi', 'ndwi', 'Mir2'],
+		    ['mndwi', 'ndwi', 'Mir2'],
 #		    ['mndwi', 'Mir2', 'awei'],
 #		    ['mndwi', 'ndwi', 'Nir' ],
 #		    ['mndwi', 'Nir' , 'awei'],
@@ -150,10 +151,10 @@ detectwatercluster = maxmbwi
 # *** SECTION GRAPH ***
 # this section regulates the graphics parameters
 [Graphs]
-plot_graphs = False
+plot_graphs = True
 
-#graphs_bands = [['Mir2', 'mndwi'], ['ndwi', 'mndwi']]
-graphs_bands = [['Mir2', 'mndwi'], ['ndwi', 'mndwi'], ['Mir2', 'mbwi']]
+graphs_bands = [['Mir2', 'mndwi'], ['ndwi', 'mndwi']]
+#graphs_bands = [['Mir2', 'mndwi'], ['ndwi', 'mndwi'], ['Mir2', 'mbwi']]
 
 # *** SECTION TIMESERIES ***
 # this section regulates the graphics parameters
