--- a/waterquality/WaterDetect.ini
+++ b/waterquality/WaterDetect.ini
@@ -45,6 +45,13 @@ parameter = turb-dogliotti, spm-get
 min_param_value = None
 max_param_value = None
 
+# how to treat negative values in the reflectances. Possible values are:
+# mask - mask the negative values
+# fixed - replace all negative values for 0.001
+# shift - shift each band by its minimum value, so every band has only positive values
+# shift_all - shift each band by the minimum value of all bands. All bands will be shifted up by the same amount
+negative_values = mask
+
 # uniform distribution=True forces the parameter to be equally displaced between
 # min and max, making it a uniform histogram. Should be used for visualization only.
 uniform_distribution = False
@@ -110,7 +117,7 @@ clustering_bands = [
 ;		    ['ndwi', 'Mir2', 'mbwi'],
 ;		    ['ndwi', 'Nir' , 'Mir2'],
 ;		    ['Nir' , 'Mir2', 'mbwi'],
-		    ['ndwi', 'Mir2'],
+;		    ['ndwi', 'Mir2'],
 ;		    ['ndwi', 'Nir' ],
 ;		    ['ndwi', 'mbwi'],
 ;		    ['Nir' , 'Mir2'],
