--- a/tests/aux_data/WaterDetect.ini
+++ b/tests/aux_data/WaterDetect.ini
@@ -7,22 +7,39 @@
 reference_band = Red
 
 # specifies the maximum percentage of invalid pixels in the image area
-maximum_invalid = 0.8
+maximum_invalid = 0.95
 
 # indicate if it is necessary to create a composite output of the area (True/False)
 create_composite = False
 
 # indicate if it should create the PDF reports
 pdf_reports = True
+pdf_resolution = 600
 
 # save the indices in output image folder (ex. MNDWI, NDWI, etc.)
 save_indices = True
+
+# if a pekel reference is being used, set the threshold for the occurrence to be considered Water
+# and also a threshold to consider it a bad mask
+pekel_water = 80
+pekel_accuracy = 90
+
+# estimate the probability of sunglint in the scene, considering solar and satellite angles
+# add this information to the PDF report
+calc_glint = True
+
+# Increase the thresholds limits for (Mir and Nir) depending on the Glint probability
+glint_mode = True
+# the lowest glint probability is assigned to Angle = 30deg
+# if min_glint_multiplier = 0.5, the threshold limit for 30deg will be increased by 0.5*threshold
+# and the limit will be greater for lower angles
+min_glint_multiplier = 0.5
 
 # *** SECTION EXTERNAL MASK ***
 # informs if there is an external mask to be used in the image's folder
 # mask_name is a unique substring for the .tif file to be identified within the folder
 [External_Mask]
-external_mask = False
+external_mask = True
 mask_name = invalid_mask
 mask_valid_value = None
 mask_invalid_value = 255
@@ -31,45 +48,12 @@ mask_invalid_value = 255
 #mask_invalid_value = 255
 
 
-# *** SECTION INVERSION (L2->L3) ***
-# These are the options needed for converting water pixel reflectance in water parameters
-# You can specify more than one parameter, separated by comma.
-# available parameters:
-# turb-dogliotti / spm-get / chl-lins / aCDOM-brezonik / chl-giteslon
-[Inversion]
-inversion = True
-parameter = turb-dogliotti, spm-get
-
-# sets minimum and maximum value for parameter for visualization legend
-# if None is provided, the scale will range from min(x) to max(x)
-min_param_value = None
-max_param_value = None
-
-# how to treat negative values in the reflectances. Possible values are:
-# mask - mask the negative values
-# fixed - replace all negative values for 0.001
-# shift - shift each band by its minimum value, so every band has only positive values
-# shift_all - shift each band by the minimum value of all bands. All bands will be shifted up by the same amount
-negative_values = mask
-
-# uniform distribution=True forces the parameter to be equally displaced between
-# min and max, making it a uniform histogram. Should be used for visualization only.
-uniform_distribution = False
-
-# matplotlib colormap to be used
-# suggestions: viridis, jet
-colormap = jet
-
-#TODO
-#grayscale = False
-#fade = 1
-
 # *** SECTION CLUSTERING ***
 # these are the options needed for the DWImage clustering algorithm
 [Clustering]
 
 average_results = False
-min_positive_pixels = 3
+min_positive_pixels = 2
 
 # Bands combinations used for the clustering algorithm. Each combination will be an Output product
 # Example: clustering_bands = [['mbwi', 'Mir2'], ['mndwi', 'mbwi'], ['Mir2', 'mndwi','ndwi']]
@@ -92,7 +76,7 @@ clustering_bands = [
 ;		    ['mndwi', 'ndwi', 'Nir' , 'mbwi'],
 #		    ['mndwi', 'Nir' , 'awei', 'mbwi'],
 #		    ['mndwi', 'ndwi', 'awei', 'Mir2'],
-#		    ['mndwi', 'ndwi', 'Mir2', 'mbwi'],
+;		    ['mndwi', 'ndwi', 'Mir2', 'mbwi'],
 #		    ['mndwi', 'Mir2', 'awei', 'mbwi'],
 ;		    ['mndwi', 'ndwi', 'Nir' , 'Mir2'],
 ;		    ['mndwi', 'Nir' , 'Mir2', 'mbwi'],
@@ -100,9 +84,9 @@ clustering_bands = [
 #		    ['mndwi', 'ndwi', 'awei'],
 		    ['mndwi', 'ndwi', 'Mir2'],
 #		    ['mndwi', 'Mir2', 'awei'],
-#		    ['mndwi', 'ndwi', 'Nir' ],
+;		    ['mndwi', 'ndwi', 'Nir' ],
 #		    ['mndwi', 'Nir' , 'awei'],
-#		    ['mndwi', 'ndwi', 'mbwi'],
+;		    ['mndwi', 'ndwi', 'mbwi'],
 #		    ['mndwi', 'mbwi', 'awei']]
 ;		    ['mndwi', 'Nir' , 'Mir2'],
 ;		    ['mndwi', 'Nir' , 'mbwi'],
@@ -112,7 +96,7 @@ clustering_bands = [
 ;		    ['mndwi', 'mbwi'],
 ;		    ['mndwi', 'Nir'],
 ;		    ['mndwi', 'Mir2'],
-#		    ['ndwi', 'mbwi', 'Nir', 'Mir2'],
+;		    ['ndwi', 'mbwi', 'Nir', 'Mir2'],
 ;		    ['ndwi', 'Nir' , 'mbwi'],
 ;		    ['ndwi', 'Mir2', 'mbwi'],
 ;		    ['ndwi', 'Nir' , 'Mir2'],
@@ -128,6 +112,11 @@ clustering_bands = [
 # supported methods 'agglomerative','k-means'
 clustering_method = agglomerative
 
+# Add a regularization to the normalized spectral indices (NDWI, MNDWI) to avoid extreme values
+# 0 means no regularization - 0.1 is a very strong one and can "compress" the indices around 0.
+# we suggest the regularization of 0.02
+regularization = 0.02
+
 # linkage for agglomerative can be 'ward', 'average', 'single' or 'complete'
 linkage = average
 
@@ -136,9 +125,9 @@ min_clusters = 2
 max_clusters = 10
 
 # inform a threshold to clip the Mir (or any band)  band at the end of processing (None if no clipping)
-clip_band = None # [mndwi, B11]
-clip_inf_value = None # [-0.2, None]
-clip_sup_value = None # [None, 0.01]
+clip_band = ['mndwi', 'Mir2', 'ndwi']
+clip_inf_value = [-0.1, None, -0.15]
+clip_sup_value = [None, 0.075, None]
 
 # supported classifiers 'naive_bayes', 'SVM', 'MLP'
 classifier = naive_bayes
@@ -152,7 +141,7 @@ max_train_size = 10000
 score_index = calinsk
 
 # method to detect the water cluster among the clusters
-# support methods: 'maxmndwi', 'minmir', 'maxmbwi'
+# support methods: 'maxmndwi', 'minmir', 'maxmbwi', 'maxndwi', 'minnir'
 detectwatercluster = maxmbwi
 
 # *** SECTION GRAPH ***
@@ -160,8 +149,8 @@ detectwatercluster = maxmbwi
 [Graphs]
 plot_graphs = True
 
-graphs_bands = [['Mir2', 'mndwi'], ['ndwi', 'mndwi']]
-#graphs_bands = [['Mir2', 'mndwi'], ['ndwi', 'mndwi'], ['Mir2', 'mbwi']]
+#graphs_bands = [['Mir2', 'mndwi'], ['ndwi', 'mndwi']]
+graphs_bands = [['Mir2', 'mndwi'], ['ndwi', 'mndwi'], ['Mir2', 'ndwi'], ['Nir', 'mbwi']]
 
 # *** SECTION TIMESERIES ***
 # this section regulates the graphics parameters
@@ -172,20 +161,20 @@ plot_ts = False
 # This section specifies the masks (cloud, shadow, etc) to be considered
 # Each product (landsat, theia, etc.) has its own logic
 [TheiaMasks]
-CLM_all_clouds_and_shadows = yes
+CLM_all_clouds_and_shadows = no
 CLM_all_clouds = no
 CLM_clouds_blue_band = no
 CLM_clouds_multi_temporal = no
-CLM_thin_clouds = yes
+CLM_thin_clouds = no
 CLM_cloud_shadows = no
 CLM_other_shadows = no
 CLM_high_clouds = no
 
 MG2_water = no
 MG2_all_clouds = no
-MG2_snow = yes
-MG2_cloud_shadows = yes
-MG2_other_shadows = yes
+MG2_snow = no
+MG2_cloud_shadows = no
+MG2_other_shadows = no
 MG2_terrain_mask = yes
 MG2_sun_too_low = yes
 MG2_sun_tangent = yes
@@ -203,3 +192,16 @@ cirrus_conf1 = no
 cirrus_conf2 = no
 terrain_occlusion = no
 
+[S2CORMasks]
+NO_DATA = yes
+SATURATED_OR_DEFECTIVE = no
+DARK_AREA_PIXELS = no
+CLOUD_SHADOWS = yes
+VEGETATION = no
+NOT_VEGETATED = no
+WATER = no
+UNCLASSIFIED = no
+CLOUD_MEDIUM_PROBABILITY = no
+CLOUD_HIGH_PROBABILITY = yes
+THIN_CIRRUS = yes
+SNOW = no
