--- a/tests/aux_data/WaterDetect.ini
+++ b/tests/aux_data/WaterDetect.ini
@@ -14,10 +14,10 @@ create_composite = False
 
 # indicate if it should create the PDF reports
 pdf_reports = True
-pdf_resolution = 600
+pdf_resolution = 1000
 
 # save the indices in output image folder (ex. MNDWI, NDWI, etc.)
-save_indices = True
+save_indices = False
 
 # if a pekel reference is being used, set the threshold for the occurrence to be considered Water
 # and also a threshold to consider it a bad mask
@@ -39,7 +39,7 @@ min_glint_multiplier = 0.5
 # informs if there is an external mask to be used in the image's folder
 # mask_name is a unique substring for the .tif file to be identified within the folder
 [External_Mask]
-external_mask = True
+external_mask = False
 mask_name = invalid_mask
 mask_valid_value = None
 mask_invalid_value = 255
@@ -51,7 +51,6 @@ mask_invalid_value = 255
 # *** SECTION CLUSTERING ***
 # these are the options needed for the DWImage clustering algorithm
 [Clustering]
-
 average_results = False
 min_positive_pixels = 2
 
@@ -122,7 +121,7 @@ linkage = average
 
 # min and max number of allowed clusters
 min_clusters = 2
-max_clusters = 10
+max_clusters = 6
 
 # inform a threshold to clip the Mir (or any band)  band at the end of processing (None if no clipping)
 clip_band = ['mndwi', 'Mir2', 'ndwi']
