--- a/tests/aux_data/WaterQuality.ini
+++ b/tests/aux_data/WaterQuality.ini
@@ -10,12 +10,12 @@
 # turb-dogliotti / spm-get / chl-lins / aCDOM-brezonik / chl-giteslon
 [Inversion]
 inversion = True
-parameter = chl-lins, spm-get
+parameter = spm-get
 
 # sets minimum and maximum value for parameter for visualization legend
 # if None is provided, the scale will range from min(x) to max(x)
-min_param_value = None
-max_param_value = None
+min_param_value = 0
+max_param_value = 20
 
 # how to treat negative values in the reflectances. Possible values are:
 # mask - mask the negative values
