--- a/waterquality/WaterQuality.ini
+++ b/waterquality/WaterQuality.ini
@@ -10,7 +10,7 @@
 # turb-dogliotti / spm-get / chl-lins / aCDOM-brezonik / chl-giteslon
 [Inversion]
 inversion = True
-parameter = turb-dogliotti, spm-get
+parameter = spm-get
 
 # sets minimum and maximum value for parameter for visualization legend
 # if None is provided, the scale will range from min(x) to max(x)
