--- a/waterquality/WaterQuality.ini
+++ b/waterquality/WaterQuality.ini
@@ -1,17 +1,6 @@
 # WaterQuality configuration file
-# Please note that All section and values are required. 
-# There are no default values hard coded!
-# If no water mask is being passed, the WaterDetect.ini should also be adjusted accordingly.
 
-# *** SECTION INVERSION (L2->L3) ***
-# These are the options needed for converting water pixel reflectance in water parameters
-# You can specify more than one parameter, separated by comma.
-# available parameters:
-# turb-dogliotti / spm-get / chl-lins / aCDOM-brezonik / chl-giteslon
 [Inversion]
-inversion = True
-parameter = spm-get
-
 # sets minimum and maximum value for parameter for visualization legend
 # if None is provided, the scale will range from min(x) to max(x)
 min_param_value = None
@@ -22,7 +11,7 @@ max_param_value = None
 # fixed - replace all negative values for 0.001
 # shift - shift each band by its minimum value, so every band has only positive values
 # shift_all - shift each band by the minimum value of all bands. All bands will be shifted up by the same amount
-negative_values = mask
+negative_values = shift
 
 # uniform distribution=True forces the parameter to be equally displaced between
 # min and max, making it a uniform histogram. Should be used for visualization only.
@@ -31,8 +20,3 @@ uniform_distribution = False
 # matplotlib colormap to be used
 # suggestions: viridis, jet
 colormap = jet
-
-#TODO
-#grayscale = False
-#fade = 1
-
