Updated to work with waterdetect 1.5.13

--- a/tests/aux_data/WaterQuality.ini
+++ b/tests/aux_data/WaterQuality.ini
@@ -1,21 +1,13 @@
 # WaterQuality configuration file
-# Please note that All section and values are required. 
-# There are no default values hard coded!
-# If no water mask is being passed, the WaterDetect.ini should also be adjusted accordingly.
 
-# *** SECTION INVERSION (L2->L3) ***
-# These are the options needed for converting water pixel reflectance in water parameters
-# You can specify more than one parameter, separated by comma.
-# available parameters:
-# turb-dogliotti / spm-get / chl-lins / aCDOM-brezonik / chl-giteslon
 [Inversion]
-inversion = True
-parameter = spm-get
-
 # sets minimum and maximum value for parameter for visualization legend
 # if None is provided, the scale will range from min(x) to max(x)
-min_param_value = 5
-max_param_value = 20
+min_param_value = None
+max_param_value = None
+
+# if the max_param_value is set to None, the max_param_percentile indicates the percentile to be used.
+max_param_percentile = 95
 
 # how to treat negative values in the reflectances. Possible values are:
 # mask - mask the negative values
@@ -31,8 +23,3 @@ uniform_distribution = False
 # matplotlib colormap to be used
 # suggestions: viridis, jet
 colormap = jet
-
-#TODO
-#grayscale = False
-#fade = 1
-
