--- a/waterquality/WaterQuality.ini
+++ b/waterquality/WaterQuality.ini
@@ -6,6 +6,9 @@
 min_param_value = None
 max_param_value = None
 
+# if the max_param_value is set to None, the max_param_percentile indicates the percentile to be used.
+max_param_percentile = 95
+
 # how to treat negative values in the reflectances. Possible values are:
 # mask - mask the negative values
 # fixed - replace all negative values for 0.001
