--- a/tests/aux_data/WaterDetect.ini
+++ b/tests/aux_data/WaterDetect.ini
@@ -4,7 +4,7 @@
 
 [General]
 # sets the reference band for resolution and projections
-reference_band = Red
+reference_band = Mir
 
 # specifies the maximum percentage of invalid pixels in the image area
 maximum_invalid = 0.95
@@ -200,7 +200,7 @@ VEGETATION = no
 NOT_VEGETATED = no
 WATER = no
 UNCLASSIFIED = no
-CLOUD_MEDIUM_PROBABILITY = no
+CLOUD_MEDIUM_PROBABILITY = yes
 CLOUD_HIGH_PROBABILITY = yes
 THIN_CIRRUS = yes
 SNOW = no
