Corrections on negative values

--- a/tests/aux_data/WaterQuality.ini
+++ b/tests/aux_data/WaterQuality.ini
@@ -14,7 +14,7 @@ max_param_percentile = 95
 # fixed - replace all negative values for 0.001
 # shift - shift each band by its minimum value, so every band has only positive values
 # shift_all - shift each band by the minimum value of all bands. All bands will be shifted up by the same amount
-negative_values = shift
+negative_values = mask
 
 # uniform distribution=True forces the parameter to be equally displaced between
 # min and max, making it a uniform histogram. Should be used for visualization only.
